--- a/app/styles/pagesStyle/EmployeeAssessmentSty.scss
+++ b/app/styles/pagesStyle/EmployeeAssessmentSty.scss
@@ -1,3 +1,23 @@
+
+.printAveragePeerAppraisalTitlesSty
+{
+
+    & > p:nth-child(1)
+    {
+        font-size: 10px !important;
+    }
+
+    & > p:nth-child(2)
+    {
+        font-size: 11px !important;
+        color: #6c6c6c !important;
+    }
+}
+
+
+
+
+
 // exam page
 
 .gridContainerSty
