update branchsalary and add iscritical,hrids in paytemplate

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <script>
-      window.config = { apiUrl: 'http://92.205.178.113:8089/' };
+      window.config = { apiUrl: 'http://localhost:5116/' };
     </script>
     <!-- The first thing in any HTML file should be the charset -->
     <meta charset="utf-8" />
